# dev-brain

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PRE_FLIGHT_CHECKLIST.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
brain_mcp/: __init__.py  run_server.py
config/: __init__.py  graphiti_init.py  settings.py
dashboard/: server.py
dashboard/static/: app.js  index.html
docs/: GITHUB_INGESTION_GUIDE.md  GRAPHITI_EXTENSIONS.md  INGESTION_GUIDE.md  QUERY_COOKBOOK.md  VISUALIZER_GUIDE.md
docs/sessions/: SESSION_SUMMARY_2026-05-10_caching.md  SESSION_SUMMARY_2026-05-15_auth.md  SESSION_SUMMARY_2026-05-20_bugfix.md  TEMPLATE.md
entities/: __init__.py  artifact.py  concept.py  decision.py  dev_session.py  experiment.py  problem.py  relationship_hints.py
hooks/: install_hooks.py  post-commit
ingestion/: __init__.py  bulk_backfill.py  commit_ingestor.py  github_ingestor.py  idempotency.py  session_drafter.py  session_ingestor.py  spec_ingestor.py
queries/: __init__.py  build_communities.py  smoke_tests.py  spot_check.py
tests/: __init__.py  conftest.py  test_commit_ingestor.py  test_dashboard.py  test_entities.py  test_github_ingestor.py  test_idempotency.py  test_session_drafter.py  test_session_ingestor.py  test_spec_ingestor.py
