[project]
name = "dev-brain"
version = "0.1.0"
description = "Graphiti-powered temporal knowledge graph for development history"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphiti-core[google-genai]>=0.28.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
